--- a/styles/notion.css
+++ b/styles/notion.css
@@ -79,10 +79,12 @@
 .notion-collection-card {
   border-radius: 16px;
   box-shadow: none;
+  background: #f7f7f7;
 }
 
 .notion-collection-card-cover img {
-  border-radius: 16px;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
 }
 
 .notion-collection-card {
@@ -90,8 +92,8 @@
 }
 
 .notion-collection-card-cover {
-  border-radius: 16px;
-  box-shadow: 2px 2px 8px 4px rgba(15, 15, 15, 0.1);
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
 }
 
 .notion-collection-card-cover {
