--- a/styles/notion.css
+++ b/styles/notion.css
@@ -193,8 +193,7 @@
 }
 
 .notion-page-cover-wrapper,
-.notion-page-cover-wrapper span,
-.notion-page-cover-wrapper img {
+.notion-page-cover-wrapper span {
   max-width: 1200px !important;
   border-radius: 24px;
 }
